--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-custom-test-image.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-custom-test-image.yaml
@@ -29,7 +29,7 @@ parameters:
 - name: CLUSTER_VARIANT
 - name: BUILD_ID
   required: false
-- name: USE_LEASE_CLIENT
+  #- name: USE_LEASE_CLIENT
 
 objects:
 
@@ -121,7 +121,8 @@ objects:
       command:
       - cp
       - /usr/bin/oc
-      - /tmp/shared/oc
+      - /usr/bin/kubectl
+      - /tmp/shared/
 
     containers:
     # Once the cluster is up, executes shared tests
