--- a/ci-operator/jobs/kubevirt/kubevirt/kubevirt-kubevirt-master-presubmits.yaml
+++ b/ci-operator/jobs/kubevirt/kubevirt/kubevirt-kubevirt-master-presubmits.yaml
@@ -4,65 +4,16 @@ presubmits:
     always_run: true
     branches:
     - master
-    context: ci/prow/dummy-test
+    context: ci/prow/e2e
     decorate: true
     decoration_config:
       skip_cloning: true
     labels:
       ci-operator.openshift.io/prowgen-controlled: "true"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
-    name: pull-ci-kubevirt-kubevirt-master-dummy-test
+    name: pull-ci-kubevirt-kubevirt-master-e2e
     path_alias: kubevirt.io/kubevirt
-    rerun_command: /test dummy-test
-    spec:
-      containers:
-      - args:
-        - --artifact-dir=$(ARTIFACTS)
-        - --branch=master
-        - --give-pr-author-access-to-namespace=true
-        - --org=kubevirt
-        - --repo=kubevirt
-        - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
-        - --sentry-dsn-path=/etc/sentry-dsn/ci-operator
-        - --target=dummy-test
-        command:
-        - ci-operator
-        env:
-        - name: CONFIG_SPEC
-          valueFrom:
-            configMapKeyRef:
-              key: kubevirt-kubevirt-master.yaml
-              name: ci-operator-master-configs
-        image: ci-operator:latest
-        imagePullPolicy: Always
-        name: ""
-        resources:
-          requests:
-            cpu: 10m
-        volumeMounts:
-        - mountPath: /etc/sentry-dsn
-          name: sentry-dsn
-          readOnly: true
-      serviceAccountName: ci-operator
-      volumes:
-      - name: sentry-dsn
-        secret:
-          secretName: sentry-dsn
-    trigger: (?m)^/test( | .* )dummy-test,?($|\s.*)
-  - agent: kubernetes
-    always_run: true
-    branches:
-    - master
-    context: ci/prow/kubevirt-e2e-test
-    decorate: true
-    decoration_config:
-      skip_cloning: true
-      timeout: 7h0m0s
-    labels:
-      pj-rehearse.openshift.io/can-be-rehearsed: "true"
-    name: pull-ci-kubevirt-kubevirt-master-kubevirt-e2e-test
-    path_alias: kubevirt.io/kubevirt
-    rerun_command: /test kubevirt-e2e-test
+    rerun_command: /test e2e
     spec:
       containers:
       - args:
@@ -73,24 +24,28 @@ presubmits:
         - --org=kubevirt
         - --repo=kubevirt
         - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
-        - --secret-dir=/usr/local/kubevirt-e2e-test-cluster-profile
+        - --secret-dir=/usr/local/e2e-cluster-profile
         - --sentry-dsn-path=/etc/sentry-dsn/ci-operator
-        - --target=kubevirt-e2e-test
-        - --template=/usr/local/kubevirt-e2e-test
+        - --target=e2e
+        - --template=/usr/local/e2e
         command:
         - ci-operator
         env:
         - name: CLUSTER_TYPE
-          value: aws
+          value: gcp
         - name: CONFIG_SPEC
           valueFrom:
             configMapKeyRef:
               key: kubevirt-kubevirt-master.yaml
               name: ci-operator-master-configs
         - name: JOB_NAME_SAFE
-          value: kubevirt-e2e-test
+          value: e2e
         - name: TEST_COMMAND
-          value: run-tests
+          value: |
+            cd /go/src/kubevirt.io/kubevirt
+            ./hack/ci/test.sh
+        - name: TEST_IMAGESTREAM_TAG
+          value: kubevirt-test
         image: ci-operator:latest
         imagePullPolicy: Always
         name: ""
@@ -98,11 +53,11 @@ presubmits:
           requests:
             cpu: 10m
         volumeMounts:
-        - mountPath: /usr/local/kubevirt-e2e-test-cluster-profile
+        - mountPath: /usr/local/e2e-cluster-profile
           name: cluster-profile
-        - mountPath: /usr/local/kubevirt-e2e-test
+        - mountPath: /usr/local/e2e
           name: job-definition
-          subPath: cluster-launch-installer-nested-virt-tests.yaml
+          subPath: cluster-launch-installer-custom-test-image.yaml
         - mountPath: /etc/sentry-dsn
           name: sentry-dsn
           readOnly: true
@@ -116,9 +71,58 @@ presubmits:
           - configMap:
               name: cluster-profile-gcp
       - configMap:
-          name: prow-job-cluster-launch-installer-nested-virt-tests
+          name: prow-job-cluster-launch-installer-custom-test-image
         name: job-definition
       - name: sentry-dsn
         secret:
           secretName: sentry-dsn
-    trigger: (?m)^/test( | .* )kubevirt-e2e-test,?($|\s.*)
+    trigger: (?m)^/test( | .* )e2e,?($|\s.*)
+  - agent: kubernetes
+    always_run: true
+    branches:
+    - master
+    context: ci/prow/images
+    decorate: true
+    decoration_config:
+      skip_cloning: true
+    labels:
+      ci-operator.openshift.io/prowgen-controlled: "true"
+      pj-rehearse.openshift.io/can-be-rehearsed: "true"
+    name: pull-ci-kubevirt-kubevirt-master-images
+    path_alias: kubevirt.io/kubevirt
+    rerun_command: /test images
+    spec:
+      containers:
+      - args:
+        - --artifact-dir=$(ARTIFACTS)
+        - --branch=master
+        - --give-pr-author-access-to-namespace=true
+        - --org=kubevirt
+        - --repo=kubevirt
+        - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
+        - --sentry-dsn-path=/etc/sentry-dsn/ci-operator
+        - --target=[images]
+        command:
+        - ci-operator
+        env:
+        - name: CONFIG_SPEC
+          valueFrom:
+            configMapKeyRef:
+              key: kubevirt-kubevirt-master.yaml
+              name: ci-operator-master-configs
+        image: ci-operator:latest
+        imagePullPolicy: Always
+        name: ""
+        resources:
+          requests:
+            cpu: 10m
+        volumeMounts:
+        - mountPath: /etc/sentry-dsn
+          name: sentry-dsn
+          readOnly: true
+      serviceAccountName: ci-operator
+      volumes:
+      - name: sentry-dsn
+        secret:
+          secretName: sentry-dsn
+    trigger: (?m)^/test( | .* )images,?($|\s.*)
