Add missing swift (8080) port

--- a/core-services/sshd-bastion/ppc64le/deployment.yaml
+++ b/core-services/sshd-bastion/ppc64le/deployment.yaml
@@ -78,10 +78,12 @@ items:
               containerPort: 5555
             - name: ost-cinder
               containerPort: 6666
-            - name: ost-glance
+            - name: ost-swift
               containerPort: 7777
-            - name: ost-neutron
+            - name: ost-glance
               containerPort: 8888
+            - name: ost-neutron
+              containerPort: 9999
           volumeMounts:
           - name: authorized-keys
             mountPath: /keys/authorized
