--- a/core-services/prow/02_config/_config.yaml
+++ b/core-services/prow/02_config/_config.yaml
@@ -510,6 +510,7 @@ tide:
     - openshift/cluster-api-provider-kubemark
     - openshift/cluster-api-provider-libvirt
     - openshift/cluster-api-provider-openstack
+    - openshift/cluster-api-provider-ovirt
     - openshift/cluster-authentication-operator
     - openshift/cluster-autoscaler-operator
     - openshift/cluster-bootstrap
@@ -610,6 +611,7 @@ tide:
     - openshift/oauth-apiserver
     - openshift/origin
     - openshift/origin-aggregated-logging
+    - openshift/ovirt-csi-driver
     - openshift/ovn-kubernetes
     - openshift/pagerduty-operator
     - openshift/prometheus
@@ -723,6 +725,7 @@ tide:
     - openshift/cluster-api-provider-kubemark
     - openshift/cluster-api-provider-libvirt
     - openshift/cluster-api-provider-openstack
+    - openshift/cluster-api-provider-ovirt
     - openshift/cluster-authentication-operator
     - openshift/cluster-autoscaler-operator
     - openshift/cluster-bootstrap
@@ -855,6 +858,7 @@ tide:
     - openshift/origin-aggregated-logging
     - openshift/origin-branding
     - openshift/osde2e
+    - openshift/ovirt-csi-driver
     - openshift/ovn-kubernetes
     - openshift/pagerduty-operator
     - openshift/pipelines-catalog
