--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -1930,6 +1930,8 @@ plugins:
   - approve
   openshift/cluster-api-provider-openstack:
   - approve
+  openshift/cluster-api-provider-ovirt:
+  - approve
   openshift/cluster-authentication-operator:
   - approve
   openshift/cluster-autoscaler-operator:
@@ -2217,6 +2219,8 @@ plugins:
   openshift/osde2e:
   - approve
   openshift/ose:
+  - approve
+  openshift/ovirt-csi-driver:
   - approve
   openshift/ovn-kubernetes:
   - approve
