--- a/ci-operator/jobs/openshift/odo/openshift-odo-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift/odo/openshift-odo-master-presubmits.yaml
@@ -93,6 +93,7 @@ presubmits:
         - --org=openshift
         - --repo=odo
         - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
+        - --secret-dir=/tmp/secret
         - --secret-dir=/usr/local/integration-e2e-benchmark-cluster-profile
         - --sentry-dsn-path=/etc/sentry-dsn/ci-operator
         - --target=integration-e2e-benchmark
@@ -130,6 +131,9 @@ presubmits:
         - mountPath: /usr/local/integration-e2e-benchmark
           name: job-definition
           subPath: cluster-launch-installer-src.yaml
+        - mountPath: /tmp/secret
+          name: odo-secret
+          readOnly: true
         - mountPath: /etc/pull-secret
           name: pull-secret
           readOnly: true
@@ -158,6 +162,9 @@ presubmits:
       - configMap:
           name: prow-job-cluster-launch-installer-src
         name: job-definition
+      - name: odo-secret
+        secret:
+          secretName: odo-secret
       - name: pull-secret
         secret:
           secretName: regcred
@@ -193,6 +200,7 @@ presubmits:
         - --org=openshift
         - --repo=odo
         - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
+        - --secret-dir=/tmp/secret
         - --secret-dir=/usr/local/integration-e2e-benchmark-cluster-profile
         - --sentry-dsn-path=/etc/sentry-dsn/ci-operator
         - --target=integration-e2e-benchmark
@@ -230,6 +238,9 @@ presubmits:
         - mountPath: /usr/local/integration-e2e-benchmark
           name: job-definition
           subPath: cluster-launch-installer-src.yaml
+        - mountPath: /tmp/secret
+          name: odo-secret
+          readOnly: true
         - mountPath: /etc/pull-secret
           name: pull-secret
           readOnly: true
@@ -258,6 +269,9 @@ presubmits:
       - configMap:
           name: prow-job-cluster-launch-installer-src
         name: job-definition
+      - name: odo-secret
+        secret:
+          secretName: odo-secret
       - name: pull-secret
         secret:
           secretName: regcred
@@ -293,6 +307,7 @@ presubmits:
         - --org=openshift
         - --repo=odo
         - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
+        - --secret-dir=/tmp/secret
         - --secret-dir=/usr/local/integration-e2e-benchmark-cluster-profile
         - --sentry-dsn-path=/etc/sentry-dsn/ci-operator
         - --target=integration-e2e-benchmark
@@ -330,6 +345,9 @@ presubmits:
         - mountPath: /usr/local/integration-e2e-benchmark
           name: job-definition
           subPath: cluster-launch-installer-src.yaml
+        - mountPath: /tmp/secret
+          name: odo-secret
+          readOnly: true
         - mountPath: /etc/pull-secret
           name: pull-secret
           readOnly: true
@@ -358,6 +376,9 @@ presubmits:
       - configMap:
           name: prow-job-cluster-launch-installer-src
         name: job-definition
+      - name: odo-secret
+        secret:
+          secretName: odo-secret
       - name: pull-secret
         secret:
           secretName: regcred
