--- a/ci-operator/config/openshift/odo/openshift-odo-master__v4.2.yaml
+++ b/ci-operator/config/openshift/odo/openshift-odo-master__v4.2.yaml
@@ -17,3 +17,6 @@ tests:
   commands: scripts/openshiftci-presubmit-all-tests.sh
   openshift_installer_src:
     cluster_profile: aws
+  secret:
+    mount_path: /tmp/secret
+    name: odo-secret
