Add CSI snapshot operator image

--- a/ci-operator/config/openshift/cluster-csi-snapshot-controller-operator/openshift-cluster-csi-snapshot-controller-operator-master.yaml
+++ b/ci-operator/config/openshift/cluster-csi-snapshot-controller-operator/openshift-cluster-csi-snapshot-controller-operator-master.yaml
@@ -9,16 +9,15 @@ build_root:
     name: release
     namespace: openshift
     tag: golang-1.13
-# TODO: when we have usable image
-#images:
-#- dockerfile_path: Dockerfile.rhel7
-#  from: base
-#  inputs:
-#    bin:
-#      as:
-#      - registry.svc.ci.openshift.org/ocp/builder:golang-1.13
-#      paths: null
-#  to: cluster-csi-snapshot-operator
+images:
+- dockerfile_path: Dockerfile.rhel7
+  from: base
+  inputs:
+    bin:
+      as:
+      - registry.svc.ci.openshift.org/ocp/builder:golang-1.13
+      paths: null
+  to: cluster-csi-snapshot-controller-operator
 promotion:
   name: "4.4"
   namespace: ocp
