--- a/core-services/release-controller/_releases/release-ocp-4.1.json
+++ b/core-services/release-controller/_releases/release-ocp-4.1.json
@@ -18,9 +18,11 @@
   },
   "verify":{
     "aws":{
+      "maxRetries": 3,
       "prowJob":{"name":"release-openshift-ocp-installer-e2e-aws-4.1"}
     },
     "aws-serial":{
+      "maxRetries": 3,
       "prowJob":{"name":"release-openshift-ocp-installer-e2e-aws-serial-4.1"}
     },
     "upgrade":{
