hypershift/toolkit: fix promotion imagestream

--- a/ci-operator/config/openshift/hypershift-toolkit/openshift-hypershift-toolkit-master.yaml
+++ b/ci-operator/config/openshift/hypershift-toolkit/openshift-hypershift-toolkit-master.yaml
@@ -13,8 +13,8 @@ images:
 - from: base
   to: hypershift-toolkit
 promotion:
-  name: "4.4"
-  namespace: ocp
+  name: "hypershift-4.4"
+  namespace: "hypershift-toolkit"
 resources:
   '*':
     limits:
