--- a/ci-operator/config/openshift/hypershift-toolkit/openshift-hypershift-toolkit-release-4.3.yaml
+++ b/ci-operator/config/openshift/hypershift-toolkit/openshift-hypershift-toolkit-release-4.3.yaml
@@ -14,8 +14,8 @@ build_root:
     namespace: openshift
     tag: golang-1.13
 promotion:
-  name: "4.3"
-  namespace: ocp
+  name: "hypershift-4.3"
+  namespace: "hypershift-toolkit"
 resources:
   '*':
     limits:
