--- a/ci-operator/config/openshift/hypershift-toolkit/openshift-hypershift-toolkit-release-4.2.yaml
+++ b/ci-operator/config/openshift/hypershift-toolkit/openshift-hypershift-toolkit-release-4.2.yaml
@@ -10,8 +10,8 @@ build_root:
     namespace: openshift
     tag: golang-1.13
 promotion:
-  name: "4.2"
-  namespace: ocp
+  name: "hypershift-4.2"
+  namespace: "hypershift-toolkit"
 resources:
   '*':
     limits:
