--- a/ci-operator/config/openshift/hypershift-toolkit/openshift-hypershift-toolkit-release-4.4.yaml
+++ b/ci-operator/config/openshift/hypershift-toolkit/openshift-hypershift-toolkit-release-4.4.yaml
@@ -14,8 +14,8 @@ images:
   to: hypershift-toolkit
 promotion:
   disabled: true
-  name: "4.4"
-  namespace: ocp
+  name: "hypershift-4.4"
+  namespace: "hypershift-toolkit"
 resources:
   '*':
     limits:
