--- a/ci-operator/config/openshift/cluster-kube-descheduler-operator/openshift-cluster-kube-descheduler-operator-master.yaml
+++ b/ci-operator/config/openshift/cluster-kube-descheduler-operator/openshift-cluster-kube-descheduler-operator-master.yaml
@@ -10,7 +10,7 @@ build_root:
     tag: golang-1.10
 images:
 - from: base
-  to: descheduler-operator
+  to: cluster-kube-descheduler-operator
 promotion:
   name: "4.4"
   namespace: ocp
