--- a/ci-operator/config/openshift/cluster-kube-descheduler-operator/openshift-cluster-kube-descheduler-operator-release-4.2.yaml
+++ b/ci-operator/config/openshift/cluster-kube-descheduler-operator/openshift-cluster-kube-descheduler-operator-release-4.2.yaml
@@ -1,6 +1,6 @@
 base_images:
   base:
-    name: "4.3"
+    name: "4.2"
     namespace: ocp
     tag: base
 build_root:
@@ -10,9 +10,9 @@ build_root:
     tag: golang-1.10
 images:
 - from: base
-  to: descheduler-operator
+  to: cluster-kube-descheduler-operator
 promotion:
-  name: "4.3"
+  name: "4.2"
   namespace: ocp
 resources:
   '*':
@@ -22,7 +22,7 @@ resources:
       cpu: 100m
       memory: 200Mi
 tag_specification:
-  name: "4.3"
+  name: "4.2"
   namespace: ocp
 tests:
 - as: verify
