--- a/ci-operator/config/openshift/cluster-kube-descheduler-operator/openshift-cluster-kube-descheduler-operator-release-4.4.yaml
+++ b/ci-operator/config/openshift/cluster-kube-descheduler-operator/openshift-cluster-kube-descheduler-operator-release-4.4.yaml
@@ -1,6 +1,6 @@
 base_images:
   base:
-    name: "4.1"
+    name: "4.4"
     namespace: ocp
     tag: base
 build_root:
@@ -10,9 +10,10 @@ build_root:
     tag: golang-1.10
 images:
 - from: base
-  to: descheduler-operator
+  to: cluster-kube-descheduler-operator
 promotion:
-  name: "4.1"
+  disabled: true
+  name: "4.4"
   namespace: ocp
 resources:
   '*':
@@ -22,7 +23,7 @@ resources:
       cpu: 100m
       memory: 200Mi
 tag_specification:
-  name: "4.1"
+  name: "4.4"
   namespace: ocp
 tests:
 - as: verify
