--- a/ci-operator/jobs/openshift/cluster-kube-descheduler-operator/openshift-cluster-kube-descheduler-operator-master-postsubmits.yaml
+++ b/ci-operator/jobs/openshift/cluster-kube-descheduler-operator/openshift-cluster-kube-descheduler-operator-master-postsubmits.yaml
@@ -1,23 +1,23 @@
 postsubmits:
-  openshift/descheduler-operator:
+  openshift/cluster-kube-descheduler-operator:
   - agent: kubernetes
     branches:
-    - ^release-4\.4$
+    - ^master$
     decorate: true
     decoration_config:
       skip_cloning: true
     labels:
       ci-operator.openshift.io/prowgen-controlled: "true"
-    name: branch-ci-openshift-descheduler-operator-release-4.4-images
+    name: branch-ci-openshift-cluster-kube-descheduler-operator-master-images
     spec:
       containers:
       - args:
         - --artifact-dir=$(ARTIFACTS)
-        - --branch=release-4.4
+        - --branch=master
         - --give-pr-author-access-to-namespace=true
         - --org=openshift
         - --promote
-        - --repo=descheduler-operator
+        - --repo=cluster-kube-descheduler-operator
         - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
         - --sentry-dsn-path=/etc/sentry-dsn/ci-operator
         - --target=[images]
@@ -27,8 +27,8 @@ postsubmits:
         - name: CONFIG_SPEC
           valueFrom:
             configMapKeyRef:
-              key: openshift-descheduler-operator-release-4.4.yaml
-              name: ci-operator-4.4-configs
+              key: openshift-cluster-kube-descheduler-operator-master.yaml
+              name: ci-operator-master-configs
         image: ci-operator:latest
         imagePullPolicy: Always
         name: ""
