--- a/ci-operator/jobs/openshift/cluster-kube-descheduler-operator/openshift-cluster-kube-descheduler-operator-release-4.1-presubmits.yaml
+++ b/ci-operator/jobs/openshift/cluster-kube-descheduler-operator/openshift-cluster-kube-descheduler-operator-release-4.1-presubmits.yaml
@@ -1,9 +1,9 @@
 presubmits:
-  openshift/descheduler-operator:
+  openshift/cluster-kube-descheduler-operator:
   - agent: kubernetes
     always_run: true
     branches:
-    - release-4.4
+    - release-4.1
     context: ci/prow/e2e-aws-operator
     decorate: true
     decoration_config:
@@ -11,17 +11,17 @@ presubmits:
     labels:
       ci-operator.openshift.io/prowgen-controlled: "true"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
-    name: pull-ci-openshift-descheduler-operator-release-4.4-e2e-aws-operator
+    name: pull-ci-openshift-cluster-kube-descheduler-operator-release-4.1-e2e-aws-operator
     rerun_command: /test e2e-aws-operator
     spec:
       containers:
       - args:
         - --artifact-dir=$(ARTIFACTS)
-        - --branch=release-4.4
+        - --branch=release-4.1
         - --give-pr-author-access-to-namespace=true
         - --lease-server=http://boskos
         - --org=openshift
-        - --repo=descheduler-operator
+        - --repo=cluster-kube-descheduler-operator
         - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
         - --secret-dir=/usr/local/e2e-aws-operator-cluster-profile
         - --sentry-dsn-path=/etc/sentry-dsn/ci-operator
@@ -35,8 +35,8 @@ presubmits:
         - name: CONFIG_SPEC
           valueFrom:
             configMapKeyRef:
-              key: openshift-descheduler-operator-release-4.4.yaml
-              name: ci-operator-4.4-configs
+              key: openshift-cluster-kube-descheduler-operator-release-4.1.yaml
+              name: ci-operator-4.1-configs
         - name: JOB_NAME_SAFE
           value: e2e-aws-operator
         - name: TEST_COMMAND
@@ -73,7 +73,7 @@ presubmits:
   - agent: kubernetes
     always_run: true
     branches:
-    - release-4.4
+    - release-4.1
     context: ci/prow/images
     decorate: true
     decoration_config:
@@ -81,27 +81,28 @@ presubmits:
     labels:
       ci-operator.openshift.io/prowgen-controlled: "true"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
-    name: pull-ci-openshift-descheduler-operator-release-4.4-images
+    name: pull-ci-openshift-cluster-kube-descheduler-operator-release-4.1-images
     rerun_command: /test images
     spec:
       containers:
       - args:
         - --artifact-dir=$(ARTIFACTS)
-        - --branch=release-4.4
+        - --branch=release-4.1
         - --give-pr-author-access-to-namespace=true
         - --org=openshift
-        - --repo=descheduler-operator
+        - --repo=cluster-kube-descheduler-operator
         - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
         - --sentry-dsn-path=/etc/sentry-dsn/ci-operator
         - --target=[images]
+        - --target=[release:latest]
         command:
         - ci-operator
         env:
         - name: CONFIG_SPEC
           valueFrom:
             configMapKeyRef:
-              key: openshift-descheduler-operator-release-4.4.yaml
-              name: ci-operator-4.4-configs
+              key: openshift-cluster-kube-descheduler-operator-release-4.1.yaml
+              name: ci-operator-4.1-configs
         image: ci-operator:latest
         imagePullPolicy: Always
         name: ""
@@ -121,7 +122,7 @@ presubmits:
   - agent: kubernetes
     always_run: true
     branches:
-    - release-4.4
+    - release-4.1
     context: ci/prow/unit
     decorate: true
     decoration_config:
@@ -129,16 +130,16 @@ presubmits:
     labels:
       ci-operator.openshift.io/prowgen-controlled: "true"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
-    name: pull-ci-openshift-descheduler-operator-release-4.4-unit
+    name: pull-ci-openshift-cluster-kube-descheduler-operator-release-4.1-unit
     rerun_command: /test unit
     spec:
       containers:
       - args:
         - --artifact-dir=$(ARTIFACTS)
-        - --branch=release-4.4
+        - --branch=release-4.1
         - --give-pr-author-access-to-namespace=true
         - --org=openshift
-        - --repo=descheduler-operator
+        - --repo=cluster-kube-descheduler-operator
         - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
         - --sentry-dsn-path=/etc/sentry-dsn/ci-operator
         - --target=unit
@@ -148,8 +149,8 @@ presubmits:
         - name: CONFIG_SPEC
           valueFrom:
             configMapKeyRef:
-              key: openshift-descheduler-operator-release-4.4.yaml
-              name: ci-operator-4.4-configs
+              key: openshift-cluster-kube-descheduler-operator-release-4.1.yaml
+              name: ci-operator-4.1-configs
         image: ci-operator:latest
         imagePullPolicy: Always
         name: ""
@@ -169,7 +170,7 @@ presubmits:
   - agent: kubernetes
     always_run: true
     branches:
-    - release-4.4
+    - release-4.1
     context: ci/prow/verify
     decorate: true
     decoration_config:
@@ -177,16 +178,16 @@ presubmits:
     labels:
       ci-operator.openshift.io/prowgen-controlled: "true"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
-    name: pull-ci-openshift-descheduler-operator-release-4.4-verify
+    name: pull-ci-openshift-cluster-kube-descheduler-operator-release-4.1-verify
     rerun_command: /test verify
     spec:
       containers:
       - args:
         - --artifact-dir=$(ARTIFACTS)
-        - --branch=release-4.4
+        - --branch=release-4.1
         - --give-pr-author-access-to-namespace=true
         - --org=openshift
-        - --repo=descheduler-operator
+        - --repo=cluster-kube-descheduler-operator
         - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
         - --sentry-dsn-path=/etc/sentry-dsn/ci-operator
         - --target=verify
@@ -196,8 +197,8 @@ presubmits:
         - name: CONFIG_SPEC
           valueFrom:
             configMapKeyRef:
-              key: openshift-descheduler-operator-release-4.4.yaml
-              name: ci-operator-4.4-configs
+              key: openshift-cluster-kube-descheduler-operator-release-4.1.yaml
+              name: ci-operator-4.1-configs
         image: ci-operator:latest
         imagePullPolicy: Always
         name: ""
