--- a/ci-operator/jobs/openshift/cluster-kube-descheduler-operator/openshift-cluster-kube-descheduler-operator-release-4.3-presubmits.yaml
+++ b/ci-operator/jobs/openshift/cluster-kube-descheduler-operator/openshift-cluster-kube-descheduler-operator-release-4.3-presubmits.yaml
@@ -1,9 +1,9 @@
 presubmits:
-  openshift/descheduler-operator:
+  openshift/cluster-kube-descheduler-operator:
   - agent: kubernetes
     always_run: true
     branches:
-    - master
+    - release-4.3
     context: ci/prow/e2e-aws-operator
     decorate: true
     decoration_config:
@@ -11,17 +11,17 @@ presubmits:
     labels:
       ci-operator.openshift.io/prowgen-controlled: "true"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
-    name: pull-ci-openshift-descheduler-operator-master-e2e-aws-operator
+    name: pull-ci-openshift-cluster-kube-descheduler-operator-release-4.3-e2e-aws-operator
     rerun_command: /test e2e-aws-operator
     spec:
       containers:
       - args:
         - --artifact-dir=$(ARTIFACTS)
-        - --branch=master
+        - --branch=release-4.3
         - --give-pr-author-access-to-namespace=true
         - --lease-server=http://boskos
         - --org=openshift
-        - --repo=descheduler-operator
+        - --repo=cluster-kube-descheduler-operator
         - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
         - --secret-dir=/usr/local/e2e-aws-operator-cluster-profile
         - --sentry-dsn-path=/etc/sentry-dsn/ci-operator
@@ -35,8 +35,8 @@ presubmits:
         - name: CONFIG_SPEC
           valueFrom:
             configMapKeyRef:
-              key: openshift-descheduler-operator-master.yaml
-              name: ci-operator-master-configs
+              key: openshift-cluster-kube-descheduler-operator-release-4.3.yaml
+              name: ci-operator-4.3-configs
         - name: JOB_NAME_SAFE
           value: e2e-aws-operator
         - name: TEST_COMMAND
@@ -73,7 +73,7 @@ presubmits:
   - agent: kubernetes
     always_run: true
     branches:
-    - master
+    - release-4.3
     context: ci/prow/images
     decorate: true
     decoration_config:
@@ -81,16 +81,16 @@ presubmits:
     labels:
       ci-operator.openshift.io/prowgen-controlled: "true"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
-    name: pull-ci-openshift-descheduler-operator-master-images
+    name: pull-ci-openshift-cluster-kube-descheduler-operator-release-4.3-images
     rerun_command: /test images
     spec:
       containers:
       - args:
         - --artifact-dir=$(ARTIFACTS)
-        - --branch=master
+        - --branch=release-4.3
         - --give-pr-author-access-to-namespace=true
         - --org=openshift
-        - --repo=descheduler-operator
+        - --repo=cluster-kube-descheduler-operator
         - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
         - --sentry-dsn-path=/etc/sentry-dsn/ci-operator
         - --target=[images]
@@ -101,8 +101,8 @@ presubmits:
         - name: CONFIG_SPEC
           valueFrom:
             configMapKeyRef:
-              key: openshift-descheduler-operator-master.yaml
-              name: ci-operator-master-configs
+              key: openshift-cluster-kube-descheduler-operator-release-4.3.yaml
+              name: ci-operator-4.3-configs
         image: ci-operator:latest
         imagePullPolicy: Always
         name: ""
@@ -122,7 +122,7 @@ presubmits:
   - agent: kubernetes
     always_run: true
     branches:
-    - master
+    - release-4.3
     context: ci/prow/unit
     decorate: true
     decoration_config:
@@ -130,16 +130,16 @@ presubmits:
     labels:
       ci-operator.openshift.io/prowgen-controlled: "true"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
-    name: pull-ci-openshift-descheduler-operator-master-unit
+    name: pull-ci-openshift-cluster-kube-descheduler-operator-release-4.3-unit
     rerun_command: /test unit
     spec:
       containers:
       - args:
         - --artifact-dir=$(ARTIFACTS)
-        - --branch=master
+        - --branch=release-4.3
         - --give-pr-author-access-to-namespace=true
         - --org=openshift
-        - --repo=descheduler-operator
+        - --repo=cluster-kube-descheduler-operator
         - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
         - --sentry-dsn-path=/etc/sentry-dsn/ci-operator
         - --target=unit
@@ -149,8 +149,8 @@ presubmits:
         - name: CONFIG_SPEC
           valueFrom:
             configMapKeyRef:
-              key: openshift-descheduler-operator-master.yaml
-              name: ci-operator-master-configs
+              key: openshift-cluster-kube-descheduler-operator-release-4.3.yaml
+              name: ci-operator-4.3-configs
         image: ci-operator:latest
         imagePullPolicy: Always
         name: ""
@@ -170,7 +170,7 @@ presubmits:
   - agent: kubernetes
     always_run: true
     branches:
-    - master
+    - release-4.3
     context: ci/prow/verify
     decorate: true
     decoration_config:
@@ -178,16 +178,16 @@ presubmits:
     labels:
       ci-operator.openshift.io/prowgen-controlled: "true"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
-    name: pull-ci-openshift-descheduler-operator-master-verify
+    name: pull-ci-openshift-cluster-kube-descheduler-operator-release-4.3-verify
     rerun_command: /test verify
     spec:
       containers:
       - args:
         - --artifact-dir=$(ARTIFACTS)
-        - --branch=master
+        - --branch=release-4.3
         - --give-pr-author-access-to-namespace=true
         - --org=openshift
-        - --repo=descheduler-operator
+        - --repo=cluster-kube-descheduler-operator
         - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
         - --sentry-dsn-path=/etc/sentry-dsn/ci-operator
         - --target=verify
@@ -197,8 +197,8 @@ presubmits:
         - name: CONFIG_SPEC
           valueFrom:
             configMapKeyRef:
-              key: openshift-descheduler-operator-master.yaml
-              name: ci-operator-master-configs
+              key: openshift-cluster-kube-descheduler-operator-release-4.3.yaml
+              name: ci-operator-4.3-configs
         image: ci-operator:latest
         imagePullPolicy: Always
         name: ""
