--- a/ci-operator/templates/openshift/endurance/endurance-test.yaml
+++ b/ci-operator/templates/openshift/endurance/endurance-test.yaml
@@ -145,7 +145,7 @@ objects:
           fi
 
           openshift-tests run-upgrade "${TEST_SUITE}" --to-image "${RELEASE_IMAGE_LATEST}" \
-            --options "${TEST_OPTIONS}" \
+            --options "${TEST_OPTIONS:-}" \
             --provider "${TEST_PROVIDER:-}" -o /tmp/artifacts/e2e.log --junit-dir /tmp/artifacts/junit
         }
 
