--- a/ci-operator/config/openshift/cluster-version-operator/openshift-cluster-version-operator-master.yaml
+++ b/ci-operator/config/openshift/cluster-version-operator/openshift-cluster-version-operator-master.yaml
@@ -34,7 +34,7 @@ tests:
   openshift_installer:
     cluster_profile: aws
 - as: e2e-aws-upgrade
-  commands: TEST_SUITE=all run-upgrade-tests
+  commands: TEST_SUITE=all TEST_OPTIONS=abort-at=100 run-upgrade-tests
   openshift_installer:
     cluster_profile: aws
     upgrade: true
