--- a/ci-operator/config/openshift/cluster-version-operator/openshift-cluster-version-operator-release-4.4.yaml
+++ b/ci-operator/config/openshift/cluster-version-operator/openshift-cluster-version-operator-release-4.4.yaml
@@ -35,7 +35,7 @@ tests:
   openshift_installer:
     cluster_profile: aws
 - as: e2e-aws-upgrade
-  commands: TEST_SUITE=all run-upgrade-tests
+  commands: TEST_SUITE=all TEST_OPTIONS=abort-at=100 run-upgrade-tests
   openshift_installer:
     cluster_profile: aws
     upgrade: true
