--- a/ci-operator/jobs/openshift/openshift-azure/openshift-openshift-azure-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift/openshift-azure/openshift-openshift-azure-master-presubmits.yaml
@@ -398,6 +398,9 @@ presubmits:
         resources: {}
       serviceAccountName: ci-operator
     trigger: (?m)^/test( | .* )upgrade-v14.0,?($|\s.*)
+  - agent: kubernetes
+    always_run: false
+    branches:
     - master
     context: vmimage
     decorate: true
