Input TAG while building kn binary for container image
 For knative-client release v0.11.0: We need to input proper TAG right before
 the binary build command so `kn version` could show proper version.

 For release-next, we don't input any TAG, thus kn nightly build will show
 the commit its built from.

--- a/ci-operator/config/openshift/knative-client/openshift-knative-client-release-v0.11.0.yaml
+++ b/ci-operator/config/openshift/knative-client/openshift-knative-client-release-v0.11.0.yaml
@@ -8,7 +8,7 @@ build_root:
   project_image:
     dockerfile_path: openshift/ci-operator/build-image/Dockerfile
 canonical_go_repository: github.com/knative/client
-binary_build_commands: make install
+binary_build_commands: TAG=v0.11.0 make install
 tests:
 - as: e2e-aws-ocp-43
   commands: "make test-e2e"
