--- a/ci-operator/config/openshift-kni/cnf-features-deploy/openshift-kni-cnf-features-deploy-master.yaml
+++ b/ci-operator/config/openshift-kni/cnf-features-deploy/openshift-kni-cnf-features-deploy-master.yaml
@@ -7,12 +7,24 @@ base_images:
     name: ubi
     namespace: ocp
     tag: "7"
+  base:
+    name: "4.4"
+    namespace: ocp
+    tag: base
 binary_build_commands: make build
+images:
+  - dockerfile_path: Dockerfile
+    from: base
+    to: sctptester
+    context_dir: tools/sctptester
+promotion:
+  excluded_images:
+    - sctptester
 build_root:
   project_image:
     dockerfile_path: openshift-ci/Dockerfile.tools
 resources:
-  '*':
+  "*":
     limits: {}
     requests:
       cpu: 100m
@@ -21,20 +33,20 @@ tag_specification:
   name: "4.4"
   namespace: ocp
 tests:
-- as: ci
-  commands: make ci-job
-  container:
-    from: src
-- as: e2e-gcp
-  commands: make functests-on-ci
-  openshift_installer_src:
-    cluster_profile: gcp
-- as: e2e-gcp-origin
-  commands: RUN_ORIGIN_TESTS=true make functests-on-ci
-  openshift_installer_src:
-    cluster_profile: gcp
-- as: cnf-e2e-gcp-periodic
-  commands: make functests-on-ci
-  cron: '* */8 * * *'
-  openshift_installer_src:
-    cluster_profile: gcp
+  - as: ci
+    commands: make ci-job
+    container:
+      from: src
+  - as: e2e-gcp
+    commands: export component=sctptester; SCTPTEST_IMAGE=$(echo $IMAGE_FORMAT | envsubst) make functests-on-ci
+    openshift_installer_src:
+      cluster_profile: gcp
+  - as: e2e-gcp-origin
+    commands: export component=sctptester; SCTPTEST_IMAGE=$(echo $IMAGE_FORMAT | envsubst) RUN_ORIGIN_TESTS=true make functests-on-ci
+    openshift_installer_src:
+      cluster_profile: gcp
+  - as: cnf-e2e-gcp-periodic
+    cron: "* */8 * * *"
+    commands: export component=sctptester; SCTPTEST_IMAGE=$(echo $IMAGE_FORMAT | envsubst) make functests-on-ci
+    openshift_installer_src:
+      cluster_profile: gcp
