--- a/ci-operator/jobs/openshift-kni/cnf-features-deploy/openshift-kni-cnf-features-deploy-master-periodics.yaml
+++ b/ci-operator/jobs/openshift-kni/cnf-features-deploy/openshift-kni-cnf-features-deploy-master-periodics.yaml
@@ -39,7 +39,8 @@ periodics:
       - name: JOB_NAME_SAFE
         value: cnf-e2e-gcp-periodic
       - name: TEST_COMMAND
-        value: make functests-on-ci
+        value: export component=sctptester; SCTPTEST_IMAGE=$(echo $IMAGE_FORMAT |
+          envsubst) make functests-on-ci
       image: ci-operator:latest
       imagePullPolicy: Always
       name: ""
