add extended-platform-tests repo

--- a/core-services/prow/02_config/_config.yaml
+++ b/core-services/prow/02_config/_config.yaml
@@ -910,6 +910,7 @@ tide:
     - openshift-kni/performance-addon-operators
     - openshift-kni/cnf-features-deploy
     - openshift-priv/ci-experiment-origin
+    - openshift/extended-platform-tests
   - labels:
     - lgtm
     - approved
