fixing minor tweaks for extended-platform-tests

--- a/core-services/prow/02_config/_config.yaml
+++ b/core-services/prow/02_config/_config.yaml
@@ -645,6 +645,7 @@ tide:
     - openshift/file-integrity-operator
     - openshift-kni/performance-addon-operators
     - openshift-kni/cnf-features-deploy
+    - openshift/extended-platform-tests
   - includedBranches:
     - release-4.0
     - release-4.1
