Update base image for heimdall images

--- a/ci-operator/config/integr8ly/heimdall/integr8ly-heimdall-master.yaml
+++ b/ci-operator/config/integr8ly/heimdall/integr8ly-heimdall-master.yaml
@@ -1,8 +1,8 @@
 base_images:
   os:
-    name: centos
-    namespace: openshift
-    tag: '7'
+    name: ubi
+    namespace: ocp
+    tag: "8"
 
 resources:
   '*':
