Add operator-lifecycle-manager, -marketplace, and -registry repos to periodic retest job.

--- a/ci-operator/jobs/infra-periodics.yaml
+++ b/ci-operator/jobs/infra-periodics.yaml
@@ -122,6 +122,9 @@ periodics:
         org:openshift
         org:openshift-priv
         repo:operator-framework/operator-sdk
+        repo:operator-framework/operator-lifecycle-manager
+        repo:operator-framework/operator-marketplace
+        repo:operator-framework/operator-registry
         repo:tnozicka/openshift-acme
       - --token=/etc/oauth/oauth
       - --updated=0
