Don't require dependent bugs on release-3.11

--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -166,6 +166,10 @@ bugzilla:
     release-4.4:
       target_release: 4.4.0
       validate_by_default: true
+    release-3.11:
+      target_release: 3.11.z
+      dependent_bug_states: null
+      dependent_bug_target_release: null
   orgs:
     openshift:
       repos:
