Add image performance operator image promotions
Signed-off-by: David Vossel <davidvossel@gmail.com>

--- a/ci-operator/config/openshift-kni/performance-addon-operators/openshift-kni-performance-addon-operators-master.yaml
+++ b/ci-operator/config/openshift-kni/performance-addon-operators/openshift-kni-performance-addon-operators-master.yaml
@@ -26,6 +26,15 @@ images:
 - dockerfile_path: openshift-ci/Dockerfile.registry.build
   from: operator-registry-base
   to: performance-addon-operator-registry
+- dockerfile_path: openshift-ci/Dockerfile.registry.upstream.dev
+  from: operator-registry-base
+  to: performance-addon-operator-registry-master
+promotion:
+  excluded_images:
+  - operator-registry-base
+  - performance-addon-operator-registry
+  name: "performance-addon-operator"
+  namespace: ocp
 resources:
   '*':
     limits:
