include pullsecret for imagestream import step

--- a/ci-operator/jobs/openshift/release/openshift-release-release-4.3-periodics.yaml
+++ b/ci-operator/jobs/openshift/release/openshift-release-release-4.3-periodics.yaml
@@ -19,6 +19,7 @@ periodics:
           --secret-dir=/usr/local/ci-credentials \
           --secret-dir=/usr/local/endurance-cluster-credentials-aws \
           --secret-dir=/usr/local/aws-openshift-llc-account-credentials \
+          --secret-dir=/usr/local/pull-secret \
           --template=/usr/local/endurance-test/endurance-test.yaml \
           --input-hash=$(BUILD_ID) --input-hash=$(JOB_NAME) \
           --target=endurance-test
@@ -63,6 +64,8 @@ periodics:
         name: aws-openshift-llc-account-credentials
       - mountPath: /usr/local/endurance-cluster-credentials-aws
         name: endurance-cluster-credentials-aws
+      - mountPath: /usr/local/pull-secret
+        name: pull-secret
     serviceAccountName: ci-operator
     volumes:
     - configMap:
@@ -77,6 +80,9 @@ periodics:
     - name: endurance-cluster-credentials-aws
       secret:
         secretName: endurance-cluster-credentials-4.3-aws
+    - name: pull-secret
+      secret:
+        secretName: ci-pull-credentials
 - agent: kubernetes
   cron: 0 12 * * 1-5
   decorate: true
@@ -96,6 +102,7 @@ periodics:
           --secret-dir=/usr/local/ci-credentials \
           --secret-dir=/usr/local/endurance-cluster-credentials-aws \
           --secret-dir=/usr/local/aws-openshift-llc-account-credentials \
+          --secret-dir=/usr/local/pull-secret \
           --template=/usr/local/endurance-test/endurance-test.yaml \
           --input-hash=$(BUILD_ID) --input-hash=$(JOB_NAME) \
           --target=endurance-test
@@ -140,6 +147,8 @@ periodics:
         name: aws-openshift-llc-account-credentials
       - mountPath: /usr/local/endurance-cluster-credentials-aws
         name: endurance-cluster-credentials-aws
+      - mountPath: /usr/local/pull-secret
+        name: pull-secret
     serviceAccountName: ci-operator
     volumes:
     - configMap:
@@ -154,6 +163,9 @@ periodics:
     - name: endurance-cluster-credentials-aws
       secret:
         secretName: endurance-cluster-credentials-4.3-aws
+    - name: pull-secret
+      secret:
+        secretName: ci-pull-credentials
 - agent: kubernetes
   cron: 0 9 * * 1-5
   decorate: true
@@ -177,6 +189,7 @@ periodics:
           --secret-dir=/usr/local/ci-credentials \
           --secret-dir=/usr/local/endurance-cluster-credentials-aws \
           --secret-dir=/usr/local/aws-openshift-llc-account-credentials \
+          --secret-dir=/usr/local/pull-secret \
           --template=/usr/local/endurance-install/endurance-install.yaml \
           --target=endurance-install \
           --input-hash=$(BUILD_ID) --input-hash=$(JOB_NAME) |& tee /tmp/ci-operator.log
@@ -231,6 +244,8 @@ periodics:
         name: aws-openshift-llc-account-credentials
       - mountPath: /usr/local/endurance-cluster-credentials-aws
         name: endurance-cluster-credentials-aws
+      - mountPath: /usr/local/pull-secret
+        name: pull-secret
     serviceAccountName: ci-operator
     volumes:
     - configMap:
@@ -245,6 +260,9 @@ periodics:
     - name: endurance-cluster-credentials-aws
       secret:
         secretName: endurance-cluster-credentials-4.3-aws
+    - name: pull-secret
+      secret:
+        secretName: ci-pull-credentials
 - agent: kubernetes
   decorate: true
   interval: 15m
