--- a/core-services/release-controller/_releases/release-ocp-4.2-ci.json
+++ b/core-services/release-controller/_releases/release-ocp-4.2-ci.json
@@ -15,7 +15,7 @@
         "excludeTags": [
           "machine-os-content",
           "ironic-ipa-downloader",
-          "ironic-machine-os-downloader",
+          "ironic-machine-os-downloader"
         ]
       }
     },
