--- a/ci-operator/jobs/openshift/osde2e/openshift-osde2e-master-periodics.yaml
+++ b/ci-operator/jobs/openshift/osde2e/openshift-osde2e-master-periodics.yaml
@@ -20,7 +20,7 @@ periodics:
       - -c
       env:
       - name: ADDON_IDS
-        value: integreatly-operator
+        value: rhmi
       - name: ADDON_TEST_HARNESSES
         value: quay.io/psturc/integreatly-operator-test-harness
       - name: DESTROY_CLUSTER
