openshift-ansible: Don't run gcp-major-upgrade by default
This test has broken and relied on too much CI specific code as is so we'll disable it until such a time that we can repair it.

--- a/ci-operator/jobs/openshift/openshift-ansible/openshift-openshift-ansible-release-3.10-presubmits.yaml
+++ b/ci-operator/jobs/openshift/openshift-ansible/openshift-openshift-ansible-release-3.10-presubmits.yaml
@@ -1,7 +1,7 @@
 presubmits:
   openshift/openshift-ansible:
   - agent: kubernetes
-    always_run: true
+    always_run: false
     branches:
     - release-3.10
     context: ci/prow/gcp-major-upgrade
