--- a/ci-operator/jobs/openshift/openshift-ansible/openshift-openshift-ansible-release-3.11-presubmits.yaml
+++ b/ci-operator/jobs/openshift/openshift-ansible/openshift-openshift-ansible-release-3.11-presubmits.yaml
@@ -1,7 +1,7 @@
 presubmits:
   openshift/openshift-ansible:
   - agent: kubernetes
-    always_run: true
+    always_run: false
     branches:
     - release-3.11
     context: ci/prow/gcp-major-upgrade
