--- a/ci-operator/jobs/openshift/openshift-tests/openshift-openshift-tests-master-postsubmits.yaml
+++ b/ci-operator/jobs/openshift/openshift-tests/openshift-openshift-tests-master-postsubmits.yaml
@@ -1,5 +1,5 @@
 postsubmits:
-  openshift/extended-platform-tests:
+  openshift/openshift-tests:
   - agent: kubernetes
     branches:
     - ^master$
@@ -8,7 +8,7 @@ postsubmits:
       skip_cloning: true
     labels:
       ci-operator.openshift.io/prowgen-controlled: "true"
-    name: branch-ci-openshift-extended-platform-tests-master-images
+    name: branch-ci-openshift-openshift-tests-master-images
     spec:
       containers:
       - args:
@@ -17,7 +17,7 @@ postsubmits:
         - --give-pr-author-access-to-namespace=true
         - --org=openshift
         - --promote
-        - --repo=extended-platform-tests
+        - --repo=openshift-tests
         - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
         - --sentry-dsn-path=/etc/sentry-dsn/ci-operator
         - --target=[images]
@@ -27,7 +27,7 @@ postsubmits:
         - name: CONFIG_SPEC
           valueFrom:
             configMapKeyRef:
-              key: openshift-extended-platform-tests-master.yaml
+              key: openshift-openshift-tests-master.yaml
               name: ci-operator-master-configs
         image: ci-operator:latest
         imagePullPolicy: Always
