--- a/ci-operator/jobs/openshift/openshift-tests/openshift-openshift-tests-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift/openshift-tests/openshift-openshift-tests-master-presubmits.yaml
@@ -1,5 +1,5 @@
 presubmits:
-  openshift/extended-platform-tests:
+  openshift/openshift-tests:
   - agent: kubernetes
     always_run: true
     branches:
@@ -11,7 +11,7 @@ presubmits:
     labels:
       ci-operator.openshift.io/prowgen-controlled: "true"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
-    name: pull-ci-openshift-extended-platform-tests-master-images
+    name: pull-ci-openshift-openshift-tests-master-images
     rerun_command: /test images
     spec:
       containers:
@@ -20,7 +20,7 @@ presubmits:
         - --branch=master
         - --give-pr-author-access-to-namespace=true
         - --org=openshift
-        - --repo=extended-platform-tests
+        - --repo=openshift-tests
         - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
         - --sentry-dsn-path=/etc/sentry-dsn/ci-operator
         - --target=[images]
@@ -31,7 +31,7 @@ presubmits:
         - name: CONFIG_SPEC
           valueFrom:
             configMapKeyRef:
-              key: openshift-extended-platform-tests-master.yaml
+              key: openshift-openshift-tests-master.yaml
               name: ci-operator-master-configs
         image: ci-operator:latest
         imagePullPolicy: Always
@@ -60,7 +60,7 @@ presubmits:
     labels:
       ci-operator.openshift.io/prowgen-controlled: "true"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
-    name: pull-ci-openshift-extended-platform-tests-master-unit
+    name: pull-ci-openshift-openshift-tests-master-unit
     rerun_command: /test unit
     spec:
       containers:
@@ -69,7 +69,7 @@ presubmits:
         - --branch=master
         - --give-pr-author-access-to-namespace=true
         - --org=openshift
-        - --repo=extended-platform-tests
+        - --repo=openshift-tests
         - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
         - --sentry-dsn-path=/etc/sentry-dsn/ci-operator
         - --target=unit
@@ -79,7 +79,7 @@ presubmits:
         - name: CONFIG_SPEC
           valueFrom:
             configMapKeyRef:
-              key: openshift-extended-platform-tests-master.yaml
+              key: openshift-openshift-tests-master.yaml
               name: ci-operator-master-configs
         image: ci-operator:latest
         imagePullPolicy: Always
