skip conformance tests

--- a/ci-operator/jobs/openshift/osde2e/openshift-osde2e-master-periodics.yaml
+++ b/ci-operator/jobs/openshift/osde2e/openshift-osde2e-master-periodics.yaml
@@ -25,6 +25,8 @@ periodics:
         value: quay.io/miwilson/prow-operator-test-harness
       - name: DESTROY_CLUSTER
         value: "false"
+      - name: GINKGO_SKIP
+        value: OpenShift E2E
       - name: OSD_ENV
         value: stage
       image: registry.svc.ci.openshift.org/openshift/release:golang-1.13
@@ -69,6 +71,8 @@ periodics:
       env:
       - name: DESTROY_CLUSTER
         value: "false"
+      - name: GINKGO_SKIP
+        value: OpenShift E2E
       - name: MAJOR_TARGET
         value: "4"
       - name: MINOR_TARGET
@@ -111,6 +115,8 @@ periodics:
       env:
       - name: DESTROY_CLUSTER
         value: "false"
+      - name: GINKGO_SKIP
+        value: OpenShift E2E
       - name: MAJOR_TARGET
         value: "4"
       - name: MINOR_TARGET
@@ -155,6 +161,8 @@ periodics:
       env:
       - name: DESTROY_CLUSTER
         value: "false"
+      - name: GINKGO_SKIP
+        value: OpenShift E2E
       - name: MAJOR_TARGET
         value: "4"
       - name: MINOR_TARGET
@@ -199,6 +207,8 @@ periodics:
       env:
       - name: DESTROY_CLUSTER
         value: "false"
+      - name: GINKGO_SKIP
+        value: OpenShift E2E
       - name: MAJOR_TARGET
         value: "4"
       - name: MINOR_TARGET
@@ -241,6 +251,8 @@ periodics:
       env:
       - name: DESTROY_CLUSTER
         value: "false"
+      - name: GINKGO_SKIP
+        value: OpenShift E2E
       - name: MAJOR_TARGET
         value: "4"
       - name: MINOR_TARGET
@@ -327,6 +339,8 @@ periodics:
       env:
       - name: DESTROY_CLUSTER
         value: "false"
+      - name: GINKGO_SKIP
+        value: OpenShift E2E
       - name: OSD_ENV
         value: prod
       image: registry.svc.ci.openshift.org/openshift/release:golang-1.13
@@ -365,6 +379,8 @@ periodics:
       env:
       - name: DESTROY_CLUSTER
         value: "false"
+      - name: GINKGO_SKIP
+        value: OpenShift E2E
       - name: MAJOR_TARGET
         value: "4"
       - name: MINOR_TARGET
@@ -409,6 +425,8 @@ periodics:
       env:
       - name: DESTROY_CLUSTER
         value: "false"
+      - name: GINKGO_SKIP
+        value: OpenShift E2E
       - name: MAJOR_TARGET
         value: "4"
       - name: MINOR_TARGET
@@ -495,6 +513,8 @@ periodics:
       env:
       - name: DESTROY_CLUSTER
         value: "false"
+      - name: GINKGO_SKIP
+        value: OpenShift E2E
       - name: MAJOR_TARGET
         value: "4"
       - name: MINOR_TARGET
@@ -537,6 +557,8 @@ periodics:
       env:
       - name: DESTROY_CLUSTER
         value: "false"
+      - name: GINKGO_SKIP
+        value: OpenShift E2E
       - name: MAJOR_TARGET
         value: "4"
       - name: MINOR_TARGET
@@ -581,6 +603,8 @@ periodics:
       env:
       - name: DESTROY_CLUSTER
         value: "false"
+      - name: GINKGO_SKIP
+        value: OpenShift E2E
       - name: MAJOR_TARGET
         value: "4"
       - name: MINOR_TARGET
@@ -626,6 +650,8 @@ periodics:
       env:
       - name: DESTROY_CLUSTER
         value: "false"
+      - name: GINKGO_SKIP
+        value: OpenShift E2E
       - name: MAJOR_TARGET
         value: "4"
       - name: MINOR_TARGET
